--- a/views/index.html
+++ b/views/index.html
@@ -6,10 +6,11 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    
-<script type="module" crossorigin src="/assets/index.a5ead45a.js"></script>
-  <link rel="modulepreload" href="/assets/vendor.3ed85b8c.js">
-  <link rel="stylesheet" href="/assets/index.ee2da435.css">
+    <link rel="stylesheet" href="/css/gloab.css">
+    <link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.min.css">
+<script type="module" crossorigin src="/assets/index.32bb4ab8.js"></script>
+  <link rel="modulepreload" href="/assets/vendor.da39e7fd.js">
+  <link rel="stylesheet" href="/assets/index.770b6bb9.css">
 </head>
 
 <body>
